# dyngpu

./: Cargo.toml  README.md
examples/: rainbow.rs  rainbow.wgsl  triangle.rs  triangle.wgsl
src/: error.rs  lib.rs  resolution.rs  winit.rs
src/collections/: mod.rs  type_map.rs
src/gpu/: mod.rs  surface.rs
src/gpu/context/: bind_group.rs  buffer.rs  mod.rs  render_pipeline.rs
src/gpu/device/: bind_group.rs  buffer.rs  mod.rs  render_pipeline.rs
src/resource/: mod.rs  shaders.rs
src/stage/: mod.rs  store.rs
src/stage/task/: constructor.rs  executor.rs  mod.rs
src/task/: constructor.rs  executor.rs  mod.rs
