[package]
name = "dyngpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.21.0"
hashbrown = "0.15.2"
pollster = "0.4.0"
thiserror = "2.0.9"
wgpu = "23.0.1"
winit = { version = "0.30.7", optional = true }

[dev-dependencies]
dyngpu = { path = ".", features = ["winit"] }
winit = "0.30.7"
